--- a/1-Java基础/1-00【Java基础2】.md
+++ b/1-Java基础/1-00【Java基础2】.md
@@ -231,7 +231,7 @@ public class User {
 
 多个类中存在相同属性和行为时，将这些内容抽取到单独一个类中，那么多个类无需再定义这些属性和行为，只要继承那一个类即可。如图所示：
 
-![](D:\Java\笔记\图片\1-00【Java基础】\7继承.png)
+![](..\图片\1-00【Java基础】\7继承.png)
 
 其中，多个类可以称为子类，单独那一个类称为父类、超类（superclass）或者基类。
 
@@ -387,7 +387,7 @@ public class ExtendsDemo07{
 间，便可以包含其父类的成员，如果父类成员非private修饰，则子类可以随意使用父类成员。代码体现在子类的构
 造方法调用时，一定先调用父类的构造方法。理解图解如下：
 
-![](D:\Java\笔记\图片\1-00【Java基础】\8super和this.png)
+![](..\图片\1-00【Java基础】\8super和this.png)
 
 - super ：代表父类的存储空间标识(可以理解为父亲的引用)。
 - this ：代表当前对象的引用(谁调用就代表谁)。
@@ -620,7 +620,7 @@ static 修饰的内容：
 - 存储于一块固定的内存区域（静态区），所以，可以直接被类名调用。
 - 它优先于对象存在，所以，可以被所有对象共享。
 
-![](D:\Java\笔记\图片\1-00【Java基础】\9静态原理.png)
+![](..\图片\1-00【Java基础】\9静态原理.png)
 
 **类变量**
 
@@ -1934,4 +1934,4 @@ public class Test {
 
 # 第六章 JDK版本特性
 
-![](D:\Java\笔记\图片\1-00【Java基础】\12-1版本特性.png)
+![](..\图片\1-00【Java基础】\12-1版本特性.png)
