--- a/1-Java基础/1-02【集合】.md
+++ b/1-Java基础/1-02【集合】.md
@@ -603,6 +603,10 @@ public class HashMap<K,V> extends AbstractMap<K,V>
 
 将链表转换成红黑树前会判断，如果阈值大于8，但是数组长度小64，此时并不会将链表变为红黑树。而是选择进行数组扩容。这样做的目的是因为数组比较小，尽量避开红黑树结构，这种情况下变为红黑树结构，反而会降低效率，因为红黑树需要进行左旋，右旋，变色这些操作来保持平衡。同时数组长度小于64时，搜索时间相对快一些。所以综上所述为了提高性能和减少搜索时间，底层在阈值大于8并且数组长度大于64时，链表才转换为红黑树。
 
+桶，可以理解为哈希表中的key，每一个key对应一个桶，桶中放着链表。哈希是空间换时间的。
+
+![](D:\Java\笔记\图片\1-02【集合】\4-1哈希表.png)
+
 ### 2.1.1 哈希碰撞
 
 哈希表底层采用key的hashCode方法的值结合数组长度进行无符号右移（>>>）、按位异或（^）、按位与（&）计算出索引的。
