--- a/1-Java基础/1-04【异常、断言、单元测试】.md
+++ b/1-Java基础/1-04【异常、断言、单元测试】.md
@@ -1,6 +1,6 @@
 <!-- 运行时异常Runtime_Exception非受检查异常 -->
 
-# 第一章 异常
+# 第一章 异常介绍
 
 异常，就是不正常的意思。在生活中医生说，你的身体某个部位有异常，该部位和正常相比有点不同，该部位的功能将受到影响。
 
@@ -20,7 +20,7 @@
 
 出现异常，不要紧张，把异常的简单类型名，拷贝到API中去查。
 
-![](D:\Java\笔记\图片\1-04【异常、单元测试】\1异常分类.png)
+![](..\图片\1-04【异常、断言、单元测试】\1异常分类.png)
 
 Throwable体系：
 
@@ -39,7 +39,7 @@ Throwable中的常用方法如下：
 
 我们平常说的异常就是指Exception，因为这类异常一旦出现，我们就要对代码进行更正，修复程序。
 
-![](D:\Java\笔记\图片\1-04【异常、单元测试】\1异常分类.png)
+![](..\图片\1-04【异常、断言、单元测试】\1异常分类.png)
 
 异常(Exception)的分类：
 
@@ -413,6 +413,20 @@ public class Demo01TryCatch {
 
 多个异常使用捕获可以使用如下的处理方案：多个异常分别处理、多个异常一次捕获多次处理、多个异常一次捕获一次处理。
 
+一般我们时使用一次捕获多次处理方式，格式如下：
+
+```java
+try {
+    编写可能会出现异常的代码
+} catch(异常类型A e) { // 当try中出现A类型异常，就用该catch来捕获。
+    处理异常的代码 	// 记录日志/打印异常信息/继续抛出异常
+} catch(异常类型B e) { // 当try中出现B类型异常，就用该catch来捕获。
+    处理异常的代码 	// 记录日志/打印异常信息/继续抛出异常
+}
+```
+
+> 注意：这种异常处理方式，要求多个catch中的异常不能相同，并且若catch中的多个异常之间有子父类异常的关系，那么子类异常要求在上面的catch处理，父类异常在下面的catch处理。
+
 在开发中也可以在catch将编译器异常转化成运行期异常处理。
 
 ## 2.4 finally代码块
@@ -496,25 +510,23 @@ Code:
         0: bipush        10
         2: istore_0
         3: iload_0
-        4: istore_1 				 //暂存返回值
+        4: istore_1 				 // 暂存返回值
         5: bipush        20
         7: istore_0
         8: iload_0
-        9: ireturn					//ireturn会返回操作数栈顶的整型值20
-       10: astore_2					//如果出现异常，还是会执行finally块中的内容，没有抛出异常
+        9: ireturn					// ireturn会返回操作数栈顶的整型值20
+       10: astore_2					// 如果出现异常，还是会执行finally块中的内容，没有抛出异常
        11: bipush        20
        13: istore_0
        14: iload_0
-       15: ireturn					//这里没有athrow了
+       15: ireturn					// 这里没有athrow了
      Exception table:
         from    to  target type
             0     5    10   anyCopy
 ```
 
 - 由于 ﬁnally 中的 ireturn 被插入了所有可能的流程，因此返回结果肯定以ﬁnally的为准
-- 至于字节码中第 2 行，似乎没啥用，且留个伏笔，看下个例子
-- 跟上例中的 ﬁnally 相比，发现没有 athrow 了，这告诉我们：如果在 ﬁnally 中出现了 return，会吞掉异常
-- 所以不要在finally中进行返回操作
+- 如果在 ﬁnally 中出现了 return，会吞掉异常。所以不要在finally中进行返回操作
 
 例如下面的操作会吞掉异常：
 
@@ -702,7 +714,7 @@ JDK9的新特性：
 A a = new A();
 B b = new B();
 
-try(a；b) {
+try(a; b) {
     可能会产生异常的代码
 } catch(异常类变量 变量名) {
     异常的处理逻辑
@@ -731,102 +743,9 @@ public class Demo03JDK9 {
 }
 ```
 
-## 2.6 异常注意事项
+## 2.6 子类继承父类异常
 
-运行时异常被抛出可以不处理。即不捕获也不声明抛出。
-
-### 2.6.1 多个异常捕获
-
-多个异常使用捕获又该如何处理呢？
-
-1. 多个异常分别处理。
-2. 多个异常一次捕获，多次处理。
-3. 多个异常一次捕获一次处理。
-
-一般我们时使用一次捕获多次处理方式，格式如下：
-
-```java
-try {
-    编写可能会出现异常的代码
-} catch(异常类型A e) { // 当try中出现A类型异常，就用该catch来捕获。
-    处理异常的代码 	// 记录日志/打印异常信息/继续抛出异常
-} catch(异常类型B e) { // 当try中出现B类型异常，就用该catch来捕获。
-    处理异常的代码 	// 记录日志/打印异常信息/继续抛出异常
-}
-```
-
-> 注意：这种异常处理方式，要求多个catch中的异常不能相同，并且若catch中的多个异常之间有子父类异常的关系，那么子类异常要求在上面的catch处理，父类异常在下面的catch处理。
-
-```java
-public class Demo01Exception {
-    public static void main(String[] args) {
-
-        // 1.多个异常分别处理。
-        try {
-            int[] arr = {1, 2, 3};
-            // ArrayIndexOutOfBoundsException: Index 3 out of bounds for length 3
-            System.out.println(arr[3]);
-        } catch (ArrayIndexOutOfBoundsException e) {
-            System.out.println(e);
-        }
-
-        try {
-            List<Integer> list = List.of(1, 2, 3);
-            // IndexOutOfBoundsException :Index 3 out of bounds for length 3
-            System.out.println(list.get(3));
-        } catch (ArrayIndexOutOfBoundsException e) {
-            System.out.println(e);
-        }
-    }
-}
-```
-
-```java
-public class Demo01Exception {
-    public static void main(String[] args) {
-
-        // 2.多个异常一次捕获，多次处理
-        /*
-            一个try多个catch注意事项：
-                catch里面定义的异常变量，如果有子父类关系，那么子类的异常必须写在上面，否则就会报错
-                ArrayIndexOutOfBoundsException extends IndexOutOfBoundsException
-         */
-        try {
-            int[] arr = {1, 2, 3};
-            // ArrayIndexOutOfBoundsException: Index 3 out of bounds for length 3
-            System.out.println(arr[3]);
-            List<Integer> list = List.of(1, 2, 3);
-            // IndexOutOfBoundsException :Index 3 out of bounds for length 3
-            System.out.println(list.get(3));
-        } catch (ArrayIndexOutOfBoundsException e) {
-            System.out.println(e);
-        } catch (IndexOutOfBoundsException e) {
-            System.out.println(e);
-        }
-    }
-}
-```
-
-```java
-public class Demo01Exception {
-    public static void main(String[] args) {
-        // 3.多个异常一次捕获一次处理
-        try {
-            int[] arr = {1, 2, 3};
-            // ArrayIndexOutOfBoundsException: Index 3 out of bounds for length 3
-            System.out.println(arr[3]);
-            List<Integer> list = List.of(1, 2, 3);
-            // IndexOutOfBoundsException :Index 3 out of bounds for length 3
-            System.out.println(list.get(3));
-        } catch (Exception e) {
-            System.out.println(e);
-        }
-        System.out.println("后续代码！");
-    }
-}
-```
-
-### 2.6.3 子类继承父类异常
+子类继承父类异常注意事项：
 
 * 如果父类抛出了多个异常，子类重写父类方法时，抛出和父类相同的异常或者是父类异常的子集或者不抛出异常。
 * 父类方法没有抛出异常，子类重写父类该方法时也不可抛出异常。此时子类产生该异常，只能捕获处理，不能声明抛出
@@ -866,6 +785,8 @@ class Zi extends Fu {
 
 ## 2.7 自定义异常
 
+![](..\图片\1-04【异常、断言、单元测试】\1异常分类.png)
+
 为什么需要自定义异常类：我们说了java中不同的异常类，分别表示着某一种具体的异常情况，那么在开发中总是有些异常情况是JDK没有定义好的，此时我们根据自己业务的异常情况来定义异常类。例如年龄负数问题，考试成绩负数问题等等。
 
 什么是自定义异常类：在开发中根据自己业务的异常情况来定义异常类。
@@ -892,7 +813,7 @@ public class XXXException extends Exception / RuntimeException {
 
    继承`RuntimeException`：那么自定义的异常类就是一个运行期异常，无需处理，交给虚拟机处理（中断处理）
 
-下面来联系一下自定义异常类：自定义一个业务逻辑异常：**RegisterException**。一个注册异常类。
+下面练习一下自定义异常类：`RegisterException`。一个注册异常类。
 
 ```java
 public class RegisterException extends Exception{
@@ -944,37 +865,193 @@ public class Demo01 {
 }
 ```
 
-# 第三章 Junit单元测试
+# 第三章 断言
+
+断言是为了方便调试程序，并不是发布程序的组成部分。理解这一点是很关键的。
+
+默认情况下，JVM是关闭断言的。因此如果想使用断言调试程序，需要手动打开断言功能。在命令行模式下运行Java程序时可增加参数`-enableassertions`或者`-ea`打开断言。可通过`-disableassertions`或者`-da`关闭断言。
+
+开启断言方式如下：
+
+* 如果是在命令行模式下运行，需要指明开启断言功能。如`java -ea 运行的类`。
+
+* 如果是在IDE（VSCode）下面，需要设置一下：
+
+  ```json
+  // 在项目下面创建.vscode文件夹，下面创建settings.json文件，下面复制进去
+  {
+      // maven、gradle的配置文件变更后自动更新
+      "java.configuration.updateBuildConfiguration": "automatic", 
+      "java.eclipse.downloadSources": true,       // 设置导入jar包下载源代码
+      "java.maven.downloadSources": true,         // 设置导入jar包下载源代码
+      "launch": {
+          "configurations": [
+              {
+                  "name": "Java: Current File",
+                  "type": "java",
+                  "request": "launch",
+                  "mainClass": "com.linxuan.demo01.Demo01", // 这里需要改成自己的类路径
+                  "vmArgs": "-enableassertions" // 需要设置的参数 开启断言
+              }
+          ]
+      }
+  }
+  ```
+
+## 3.1 断言使用
+
+断言是通过关键字`assert`来定义的，一般的，它有两种形式。
+
+1. `assert <bool expression>`
+
+   ```java
+   boolean isStudent = false;
+   assert isStudent;
+   ```
+
+2. `assert <bool expression> : <message>`
+
+   ```java
+   boolean isSafe = false;
+   assert isSafe : "Not Safe at all";
+   ```
+
+第一种形式：
+
+```java
+public class AssertionTest {
+    public static void main(String[] args) {
+
+        boolean isSafe = false;
+        assert isSafe;
+        System.out.println("断言通过!");
+    }
+}
+```
+
+如果不开启断言功能那么会输出`断言通过`，开启断言功能，因为`isSafe`是`false`导致断言失败那么就会输出
+
+```css
+Exception in thread "main" java.lang.AssertionError
+        at com.linxuan.demo01.Demo01.main(Demo01.java:8)
+```
+
+第二种形式：
+
+```java
+public class AssertionTest {
+    public static void main(String[] args) {
+        boolean isSafe = false;
+        assert isSafe : "Not safe at all";
+        System.out.println("断言通过!");
+    }
+}
+```
+
+```css
+Exception in thread "main" java.lang.AssertionError: Not safe at all
+	at AssertionTest.main(AssertionTest.java:7)
+```
+
+第二种形式和第一种的区别在于后者可以指定错误信息。
+
+## 3.2 注意事项
+
+断言只是为了用来调试程序，切勿将断言写入业务逻辑中。比如考虑下面这个简单的例子：
+
+```java
+public class AssertionTest {
+    public static void main(String[] args) {
+        assert ( args.length > 0);
+        System.out.println(args[1]);
+    }
+}
+```
+
+
+该句`assert (args.length > 0)`和`if(args.length > 0)`意思相近，但是如果在发布程序的时候（一般都不会开启断言），所以该句会被忽视，因此会导致以下
+
+```css
+Exception in thread "main" java.lang.ArrayIndexOutOfBoundsException: 1
+	at AssertionTest.main(AssertionTest.java:7)
+```
+
+更好的替代品：JUnit。
+
+## 3.3 Junit断言
+
+Maven导入依赖
+
+```xml
+<!-- 单元测试 -->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.11</version>
+</dependency>
+```
+
+常用API如下：
+
+1. `assertTrue(boolean condition)`  用于判断一个条件为真，如果为false会抛出异常
+
+   ```java
+   // 部分源代码如下：
+   public class Assert {
+       static public void assertTrue(boolean condition) {
+           assertTrue(null, condition);
+       }
+   
+       static public void assertTrue(String message, boolean condition) {
+           if (!condition) {
+               fail(message);
+           }
+       }
+   
+       static public void fail(String message) {
+           if (message == null) {
+               throw new AssertionError();
+           }
+           throw new AssertionError(message);
+       }
+   }
+   ```
+
+2. `assertFalse(boolean condition)`  用于判断一个条件为假，如果为真会抛出异常。
+
+3. `assertEquals(..........)`  用于判断前后相等。
+
+   ```java
+   // 前面是期望的结果 后面是结果
+   static public void assertEquals(Object expected, Object actual) {
+       assertEquals(null, expected, actual);
+   }
+   ```
+
+# 第四章 Junit单元测试
 
 测试分类：
 
 1. 黑盒测试：不需要写代码，给输入值，看看程序是否能够输出期望的值。
 2. 白盒测试：需要写代码，关注程序具体的执行流程。(Junit单元测试就是白盒测试)。
 
-![](D:\Java\笔记\图片\1-04【异常、单元测试】\4Junit.png)
+![](..\图片\1-04【异常、断言、单元测试】\4Junit.png)
 
 使用方法如下：
 
 1. 定义一个测试类（测试用例）
    * 测试类名命名规则：被测试的类名 + Test `CalculatorTest`
    * 包名命名规则：XXX.XXX.XXX.test  `com.linxuan.test`
-2. 在测试类里面定义测试方法（测试方法可以独立运行，点击旁边的绿色小三角即可）
+2. 在测试类里面定义测试方法（测试方法可以独立运行，点击旁边的绿色小三角即可）。
+   * 测试方法要使用public修饰、返回值是void、参数为空参。
    * 方法名命名规则：test + 测试的方法名 `testAdd()`
-   * 返回值：void
-   * 参数列表：空参
-
-   * 测试方法要使用public修饰
 3. 给测试方法加上注解`@Test`
 4. 导入Junit依赖环境
 5. 运行测试方法，检查判定结果（测试方法可以独立运行，点击旁边的绿色小三角即可）
 
-## 3.1 判定结果
+## 4.1 判定结果
 
-* 红色：失败
-
-* 绿色：成功
-
-* 一般我们会使用断言操作来处理结果，`Assert.assertEquals(期望的结果，result);`。如果结果与我们期望的结果不同，会抛出异常，变成红色。
+一般我们会使用断言操作来处理结果`Assert.assertEquals(期望的结果，result);`。如果结果与我们期望的结果不同，会抛出异常，变成红色。红色代表失败、绿色代表成功。
 
 
 ```java
@@ -1018,16 +1095,12 @@ public class CalculatorTest {
 }
 ```
 
-## 3.2 补充注解
+## 4.2 补充注解
 
 当我们在测试的时候会有很多重复的操作，例如IO流中的获取资源和释放资源。每当测试一个方法就需要重复操作。有注解可以帮助我们。
 
-* `@Before`：
-  * 修饰的成员方法会在测试之前被自动执行
-  * 初始化方法：用于资源申请，所有测试方法在执行之前都会先执行该方法
-* `@After`：
-  * 修饰的成员方法会在测试方法执行之后自动被执行
-  * 释放资源方法：在所有测试方法执行完成之后，都会自动执行该方法
+* `@Before`：修饰的成员方法会在测试之前被自动执行。用于资源申请，所有测试方法在执行之前都会先执行该方法
+* `@After`：修饰的成员方法会在测试方法执行之后自动被执行。用于释放资源，在所有测试方法执行完成之后，都会自动执行该方法
 
 `@After`注解的方法没有必要放在最后，两者放在前面就可以了，最后会自动执行这个注解的方法的。
 
