--- a/1-Java基础/1-16【JVM3-类文件】.md
+++ b/1-Java基础/1-16【JVM3-类文件】.md
@@ -1,4 +1,4 @@
-![](D:\Java\笔记\图片\1-16【jvm】\3.png)
+![](..\图片\1-16【jvm】\3.png)
 
 # 第一章 类文件结构
 
@@ -6,9 +6,9 @@
 
 ```java
 public class HelloWorld {
-	public static void main(String[] args) {
-		System.out.println("hello world");
-	}
+    public static void main(String[] args) {
+        System.out.println("hello world");
+    }
 }
 ```
 
@@ -97,7 +97,7 @@ ClassFile {
 
 0000000 ca fe ba be `00 00 00 34` 00 23 0a 00 06 00 15 09
 
-前两个`00 00`是minor version，没有在类文件中体现，主要是他的主版本即`00 34`（34是16进制，翻译成十进制就是52），52就代表JDK8，51是JDK7，53是JDK9。总之，编译后的class文件版本是34的话，就说明是基于JDK8的版本。
+前两个`00 00`是minor version，没有在类文件中体现。主要是他的主版本即`00 34`（34是16进制，翻译成十进制就是52），52就代表JDK8，51是JDK7，53是JDK9。总之，编译后的class文件版本是34的话，就说明是基于JDK8的版本。
 
 ## 1.3 常量池
 
@@ -131,36 +131,26 @@ ClassFile {
 
   0000000 ca fe ba be 00 00 00 34 00 23 `0a` `00 06 00 15` 09
 
-  
-
 * **第 #2 项**
   `09` 表示一个filed信息，`00 16`（22）和`00 17`（23）表示他引用了常量池中`#22`和`#23`项来获得这个成员变量的【所属类】和【成员变量名】
 
   0000000 ca fe ba be 00 00 00 34 00 23 0a 00 06 00 15 `09`
   0000020 `00 16 00 17` 08 00 18 0a 00 19 00 1a 07 00 1b 07
 
-  
-
 * **第 #3 项**
   `08` 表示一个字符串常量名称，`00 18`（24）表示它引用了常量池中 `#24`项
 
   0000020 00 16 00 17 `08 00 18` 0a 00 19 00 1a 07 00 1b 07
-
-  
 
 * **第 #4 项**
   `0a` 表示一个method信息，`00 19`（25）和`00 1a`（26）表示它引用了常量池中`#25`和`#26`项来获得这个方法的【所属类】和【方法名】
 
   0000020 00 16 00 17 08 00 18 `0a 00 19 00 1a` 07 00 1b 07
 
-  
-
 * **第 #5 项**
   `07` 表示一个class信息，`00 1b`（27）表示它引用了常量池中`#27`项
 
   0000020 00 16 00 17 08 00 18 0a 00 19 00 1a `07 00 1b` 07
-
-  
 
 * **第 #6 项**
   `07`表示一个class信息，`00 1c`（28）表示它引用了常量池中`#28`项
@@ -168,14 +158,10 @@ ClassFile {
   0000020 00 16 00 17 08 00 18 0a 00 19 00 1a 07 00 1b `07`
   0000040 `00 1c` 01 00 06 3c 69 6e 69 74 3e 01 00 03 28 29
 
-  
-
 * **第 #07 项**
   `01`表示一个utf8串，`00 06` 表示长度，`3c 69 63 69 74 3e`是【< init >】
 
   0000040 00 1c `01 00 06 3c 69 6e 69 74 3e` 01 00 03 28 29
-
-  
 
 * **第 #08 项**
   `01`表示一个utf8串，`00 03` 表示长度，`28 29 56` 是【()V】其实就是表示无参、无返回值
@@ -183,14 +169,10 @@ ClassFile {
   0000040 00 1c 01 00 06 3c 69 6e 69 74 3e `01 00 03 28 29`
   0000060 `56` 01 00 04 43 6f 64 65 01 00 0f 4c 69 6e 65 4e
 
-  
-
 * **第 #09 项**
   `01`表示一个utf8串，`00 04`表示长度，`43 6f 64 65`是【Code（方法的一个属性，对应着字节码）】
 
   0000060 56 `01 00 04 43 6f 64 65` 01 00 0f 4c 69 6e 65 4e
-
-  
 
 * **第 #10 项**
   `01` 表示一个utf8串，`00 0f`（15）表示长度，`4c 69 6e 65 4e 75 6d 62 72 54 61 62 6c 65`是【LineNumberTable（方法的属性，方法的行号表）】
@@ -198,23 +180,17 @@ ClassFile {
   0000060 56 01 00 04 43 6f 64 65 `01 00 0f 4c 69 6e 65 4e`
   0000100 `75 6d 62 65 72 54 61 62 6c 65` 01 00 12 4c 6f 63
 
-  
-
 * **第 #11 项**
   `01`表示一个utf8串，`00 12`（18）表示长度，`4c ~ 65` 是【LocalVariableTable（代表方法的一个属性，是方法的本地变量表）】
 
   0000100 75 6d 62 65 72 54 61 62 6c 65 `01 00 12 4c 6f 63`
   0000120 `61 6c 56 61 72 69 61 62 6c 65` 54 61 62 6c 65 01
 
-  
-
 * **第 #12 项**
   `01` 表示 utf8串，`00 04`表示长度，`74 68 69 73`是【this】
 
   0000120 61 6c 56 61 72 69 61 62 6c 65 54 61 62 6c 65 `01`
   0000140 `00 04 74 68 69 73` 01 00 1d 4c 63 6e 2f 69 74 63
-
-  
 
 * **第 #13 项**
   `01`表示utf8串，`00 1d`（29）表示长度，是【Lcom/waca/jvm/t5/HelloWorld;（比如）（这是类型，在字节码里表示类型的话，引用类型是L开头;结尾）】
@@ -223,14 +199,10 @@ ClassFile {
   0000160 `61 73 74 2f 6a 76 6d 2f 74 35 2f 48 65 6c 6c 6f`
   0000200 `57 6f 72 6c 64 3d` 01 00 04 6d 61 69 6e 01 00 16
 
-  
-
 * **第 #14 项**
   `01`表示 utf8串，`00 04`表示长度，`74 68 69 73` 是【main（方法名称，可以和`#13`联系起来，是表示哪个类中的main方法）】
 
   0000200 57 6f 72 6c 64 3d `01 00 04 6d 61 69 6e` 01 00 16
-
-  
 
 * **第 #15 项**
   `01`表示一个utf8串，`00 16`（22）表示长度，是【（[Ljava/lang/String;）V】括号里面是参数类型，前面再加一个左半边的[，表示他是数组，即其实就是参数为字符串数组，无返回值。
@@ -239,14 +211,10 @@ ClassFile {
   0000220 `28 5b 4c 6a 61 76 61 2f 6c 61 6e 67 2f 53 74 72`
   0000240 `69 6e 67 3b 29 56` 01 00 04 61 72 67 73 01 00 13
 
-  
-
 * **第 #16 项**
   `01`表示一个utf8串，`00 04`表示长度，是【args(刚才main方法的参数名称)】
 
   0000240 69 6e 67 3b 29 56 `01 00 04 61 72 67 73` 01 00 13
-
-  
 
 * **第 #17 项**
   `01`表示一个utf8串，`00 13`（19）表示长度，是【[Ljava/lang/String;（进一步描述了刚才的参数类型）】
@@ -255,15 +223,11 @@ ClassFile {
   0000260 `5b 4c 6a 61 76 61 2f 6c 61 6e 67 2f 53 74 72 69`
   0000300 `6e 67 3b` 01 00 10 4d 65 74 68 6f 64 50 61 72 61
 
-  
-
 * **第 #18 项**
   `01` 表示utf8串，`00 10`（16）表示长度，是【MethodParameters（方法的一个属性，是指方法的参数名称信息）】
 
   0000300 6e 67 3b `01 00 10 4d 65 74 68 6f 64 50 61 72 61`
   0000320 `6d 65 74 65 72 73` 01 00 0a 53 6f 75 72 63 65 46
-
-  
 
 * **第 #19 项**
   `01`表示一个utf8串，`00 0a`（10）表示长度，是【SourceFile】
@@ -271,29 +235,21 @@ ClassFile {
   0000320 6d 65 74 65 72 73 `01 00 0a 53 6f 75 72 63 65 46`
   0000340 `69 6c 65` 01 00 0f 48 65 6c 6c 6f 57 6f 72 6c 64
 
-  
-
 * **第 #20 项**
   `01`表示一个utf8串，`00 0f`（15）表示长度，是【HelloWorld.java（#19 #20联系起来就是说这个类的源文件是HelloWorld.java）】
 
   0000340 69 6c 65 `01 00 0f 48 65 6c 6c 6f 57 6f 72 6c 64`
   0000360 `2e 6a 61 76 61` 0c 00 07 00 08 07 00 1d 0c 00 1e
 
-  
-
 * **第 #21 项**
   `0c`（12）表示一个【名+类型】，`00 07 00 08`引用了常量池中`#7 #8`两项。
 
   0000360 2e 6a 61 76 61 `0c 00 07 00 08` 07 00 1d 0c 00 1e
 
-  
-
 * **第 #22 项**
   `07` 表示一个class信息，`00 1d`（29）引用了常量池中`#29`项
 
   0000360 2e 6a 61 76 61 0c 00 07 00 08 `07 00 1d` 0c 00 1e
-
-  
 
 * **第 #23 项**
   `0c`表示一个【名+类型】，`00 1e`（30）`00 1f`（31）引用了常量池中`#30 #31`两项。
@@ -301,28 +257,20 @@ ClassFile {
   0000360 2e 6a 61 76 61 0c 00 07 00 08 07 00 1d `0c 00 1e`
   0000400 `00 1f` 01 00 0b 68 65 6c 6c 6f 20 77 6f 72 6c 64
 
-  
-
 * **第 #24 项**
   `01`表示一个utf8串，`00 0b`（11）表示长度，是hello world
 
   0000400 00 1f `01 00 0b 68 65 6c 6c 6f 20 77 6f 72 6c 64`
-
-  
 
 * **第 #25 项**
   `07`表示一个class信息，`00 20`（32）引用了常量池中`#32`项
 
   0000420 `07 00 20` 0c 00 21 00 22 01 00 1b 63 6e 2f 69 74
 
-  
-
 * **第 #26 项**
   `0c`表示【名+类型】，`00 21`（33）`00 22`（34）引用了常量池中`#33 #34`两项
 
   0000420 07 00 20 `0c 00 21 00 22` 01 00 1b 63 6e 2f 69 74
-
-  
 
 * **第 #27 项**
   `01`表示一个utf8串，`00 1b`（27）表示长度，是【com/linxuan/jvm/HelloWorld】
@@ -331,15 +279,11 @@ ClassFile {
   0000440 `63 61 73 74 2f 6a 76 6d 2f 74 35 2f 48 65 6c 6c`
   0000460 `6f 57 6f 72 6c 64` 01 00 10 6a 61 76 61 2f 6c 61
 
-  
-
 * **第 #28 项**
   `01` 表示一个utf8串，`00 10`（16）表示长度（6a开始到74，即就是Object类），是【java/lang/Object】
 
   0000460 6f 57 6f 72 6c 64 `01 00 10 6a 61 76 61 2f 6c 61`
   0000500 `6e 67 2f 4f 62 6a 65 63 74` 01 00 10 6a 61 76 61
-
-  
 
 * **第 #29 项**
   `01` 表示一个utf8串，`00 10`（16）表示长度，即6a到6d，是java/lang/System
@@ -347,15 +291,11 @@ ClassFile {
   0000500 6e 67 2f 4f 62 6a 65 63 74 `01 00 10 6a 61 76 61`
   0000520 `2f 6c 61 6e 67 2f 53 79 73 74 65 6d` 01 00 03 6f
 
-  
-
 * **第 #30 项**
   `01` 表示一个utf8串，`00 03`表示长度，是out
 
   0000520 2f 6c 61 6e 67 2f 53 79 73 74 65 6d `01 00 03 6f`
   0000540 `75 74` 01 00 15 4c 6a 61 76 61 2f 69 6f 2f 50 72
-
-  
 
 * **第 #31 项**
   `01`表示一个utf8串，`00 15`（21）表示长度，即4c到3b，是Ljava/io/PrintStream;
@@ -363,22 +303,16 @@ ClassFile {
   0000540 75 74 `01 00 15 4c 6a 61 76 61 2f 69 6f 2f 50 72`
   0000560 `69 6e 74 53 74 72 65 61 6d 3b` 01 00 13 6a 61 76
 
-  
-
 * **第 #32 项**
   `01` 表示一个utf8串，`00 13`（19）表示长度，是java/io/PrintStream
 
   0000560 69 6e 74 53 74 72 65 61 6d 3b `01 00 13 6a 61 76`
   0000600 `61 2f 69 6f 2f 50 72 69 6e 74 53 74 72 65 61 6d`
 
-  
-
 * **第 #33 项**
   `01` 表示一个utf8串，`00 07`表示长度，是【println】
 
   0000620 `01 00 07 70 72 69 6e 74 6c 6e` 01 00 15 28 4c 6a
-
-  
 
 * **第 #34 项**
   `01` 是utf8串，`00 15`（21）是长度，是【(Ljava/lang/String;)V】，即类型是String类型，返回值是void
@@ -391,7 +325,7 @@ ClassFile {
 
 ## 1.4 访问标识和继承信息
 
-上面的是类文件结构中的魔数、版本、常量池，接下来是access_flags，这是访问修饰的描述。从`00`开始是`access_flag`。
+上面的是类文件结构中的魔数、版本、常量池，接下来是`access_flags`，这是访问修饰的描述。从`00`开始是`access_flag`。
 
 0000660 29 56 `00 21 00 05 00 06 00 00` 00 00 00 02 00 01
 
@@ -444,7 +378,7 @@ ClassFile {
 0000700 <font color = "blue">00 07</font> <font color = "green">00 08</font> <font color = "yellOw">00 01</font> <font color = "red">00 09 00 00 00 2f 00 01 00 01</font>
 0000720 <font color = "red">00 00 00 05 2a b7 00 01 b1 00 00 00 02 00 0a 00</font>
 0000740 <font color = "red">00 00 06 00 01 00 00 00 04 00 0b 00 00 00 0c 00</font>
-0000760 <font color = "red">01 00 00 00 05 00 0c 00 0d 00 00 00 09 00 0e 00</font>
+0000760 <font color = "red">01 00 00 00 05 00 0c 00 0d 00 00</font> 00 09 00 0e 00
 
 - 红色`00 01`代表访问修饰符public，查表就可以得到。
 
@@ -573,7 +507,7 @@ https://docs.oracle.com/javase/specs/jvms/se8/html/jvms-4.html
 
 可参考：https://docs.oracle.com/javase/specs/jvms/se8/html/jvms-6.html#jvms-6.5
 
-接着上一节研究一下两组字节码指令，一个是 `public cn.linxuan.jvm.HelloWorld();` 构造方法的字节码指令：
+接着上一节研究一下两组字节码指令，一个是 `public com.linxuan.jvm.HelloWorld();` 构造方法的字节码指令：
 
 ```assembly
 2a b7 00 01 b1
@@ -673,12 +607,12 @@ Constant pool:
 
 ```java
 public class Demo01 {
-	public static void main(String[] args) {
-		int a = 10;        
-		int b = Short.MAX_VALUE + 1;        
-		int c = a + b;        
-		System.out.println(c);   
-	}
+    public static void main(String[] args) {
+        int a = 10;        
+        int b = Short.MAX_VALUE + 1;        
+        int c = a + b;        
+        System.out.println(c);   
+    }
 }
 ```
 
@@ -779,6 +713,28 @@ SourceFile: "Demo01.java"
 
 步骤如下：
 
+![](..\图片\1-16【jvm】\3.png)
+
+* `Java class 文件`就是我们虚拟机编译出来的字节码文件。
+
+* 类装载器：类装载器负责从文件系统或者网络中加载Class文件，class文件在文件开头有特定的文件标识。ClassLoader只负责class文件的加载，至于它是否可以运行，则由执行引擎Execution Engine决定。
+
+* 方法区：线程共享，存储已经被虚拟机加载的类信息、常量、静态变量。
+
+* 堆：是jvm中最大的一块，由年轻代和老年代组成，主要用于方法的执行。
+
+* Java虚拟机栈：局部变量表-存储方法参数和定义方法中的局部变量、操作数栈-在变量进行存储时需要进行入栈和出栈、动态连接-引用类型的指针、方法出口-方法的返回。
+
+* 本地方法栈：一些带有native关键字的方法就是需要Java去调用本地的C或者C++方法，因为Java有时候没法直接和操作系统底层交互，所以需要用到本地方法。
+
+* 程序计数器：决定执行下一行代码。JVM就是通过读取程序计数器的值来决定下一条需要执行的字节码指令，进而进行选择语句、循环、异常处理等。
+
+* 执行引擎：代码真正执行的地方。
+
+* 本地方法接口：融合不同的编程语言为Java所用
+
+* 本地方法库：C/C++库
+
 **类加载操作**
 
 类加载器将main方法所在的类进行类加载操作，所谓类加载实际上就是把二进制字节码数据读取到内存中。二进制字节码就是上面的所有数据了。
@@ -787,9 +743,11 @@ SourceFile: "Demo01.java"
 
 常量池也属于方法区，只不过这里单独提出来了
 
+![](..\图片\1-16【jvm】\6.png)
+
 `#16  = Integer 32768`，Short范围内的数字是和字节码指令存放在一起的，大于这个范围的时候就会存放在常量池里面了。
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-1.png)
+![](..\图片\1-16【jvm】\14-1.png)
 
 **方法字节码载入方法区**
 
@@ -815,7 +773,7 @@ SourceFile: "Demo01.java"
         17: return
 ```
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-2.png)
+![](..\图片\1-16【jvm】\14-2.png)
 
 **执行引擎开始执行字节码**
 
@@ -827,81 +785,61 @@ SourceFile: "Demo01.java"
 - `ldc2_w` 将一个 long 压入操作数栈（因为 long 是 8 个字节 所以分两次压入）
 - 这里小的数字都是和字节码指令存在一起，超过 short 范围的数字存入了常量池
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-3.png)
-
-
+![](..\图片\1-16【jvm】\14-3.png)
 
 `istore_1`：将操作数栈栈顶元素弹出，放入局部变量表的slot 1中，后面的1就代表存入到哪一个槽位。对应Java代码中的`a = 10`。
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-4.png)
+![](..\图片\1-16【jvm】\14-4.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-5.png)
-
-
+![](..\图片\1-16【jvm】\14-5.png)
 
 `ldc #16`：读取运行时常量池中`#16`，即`32768`(超过short最大值范围的数会被放到运行时常量池中)，将其加载到操作数栈中。`Short.MAX_VALUE` 是 `32767`，所以 `32768` = `Short.MAX_VALUE + 1` 实际是在编译期间计算好的
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-6.png)
-
-
+![](..\图片\1-16【jvm】\14-6.png)
 
 `istore_2`：将操作数栈中的元素弹出，放到局部变量表的2号位置
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-7.png)
+![](..\图片\1-16【jvm】\14-7.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-8.png)
-
-
+![](..\图片\1-16【jvm】\14-8.png)
 
 `iload_1 iload_2`：将局部变量表中1号位置和2号位置的元素放入操作数栈中。因为只能在操作数栈中执行运算操作
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-9.png)
+![](..\图片\1-16【jvm】\14-9.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-10.png)
-
-
+![](..\图片\1-16【jvm】\14-10.png)
 
 `iadd`：将操作数栈中的两个元素弹出栈并相加，结果再压入操作数栈中
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-11.png)
+![](..\图片\1-16【jvm】\14-11.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-12.png)
-
-
+![](..\图片\1-16【jvm】\14-12.png)
 
 `istore_3`：将操作数栈中的元素弹出，放入局部变量表的3号位置
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-13.png)
+![](..\图片\1-16【jvm】\14-13.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-14.png)
-
-
+![](..\图片\1-16【jvm】\14-14.png)
 
 `getstatic #17`：在运行时常量池中找到`#17`，发现是一个对象。在堆内存中找到该对象，并将其**引用**放入操作数栈中
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-15.png)
+![](..\图片\1-16【jvm】\14-15.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-16.png)
-
-
+![](..\图片\1-16【jvm】\14-16.png)
 
 `iload_3`：将局部变量表中3号位置的元素压入操作数栈中
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-17.png)
-
-
+![](..\图片\1-16【jvm】\14-17.png)
 
 `invokevirtual #23`：找到常量池 #23 项，定位到方法区 java/io/PrintStream.println:(I)V 方法。生成新的栈帧（分配 locals、stack等），传递参数，执行新栈帧中的字节码。
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-18.png)
+![](..\图片\1-16【jvm】\14-18.png)
 
 执行完毕，弹出栈帧
 
 清除 main 操作数栈内容
 
-![](D:\Java\笔记\图片\1-16【jvm】\14-19.png)
-
-
+![](..\图片\1-16【jvm】\14-19.png)
 
 `return`：完成 main 方法调用，弹出 main 栈帧，程序结束
 
@@ -919,9 +857,9 @@ SourceFile: "Demo01.java"
 public class Demo3_2 {
     public static void main(String[] args) {
         int i = 10;
-        int j = i++ + ++i + i--;
-        System.out.println(i);
-        System.out.println(j);
+        int j = i++ + ++i + i--; // 10 + 12 + 12
+        System.out.println(i); // 11
+        System.out.println(j); // 34
     }
 }
 ```
@@ -968,27 +906,27 @@ public static void main(java.lang.String[]);
 - 注意 iinc 指令是直接在局部变量 slot 上进行运算
 - i++ 和 ++i 的区别是先执行 iload 还是 先执行 iinc。i++是先执行iload再执行iinc，而++i相反。
 
-![](D:\Java\笔记\图片\1-16【jvm】\15-1.png)
+![](..\图片\1-16【jvm】\15-1.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\15-2.png)
+![](..\图片\1-16【jvm】\15-2.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\15-3.png)
+![](..\图片\1-16【jvm】\15-3.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\15-4.png)
+![](..\图片\1-16【jvm】\15-4.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\15-5.png)
+![](..\图片\1-16【jvm】\15-5.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\15-6.png)
+![](..\图片\1-16【jvm】\15-6.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\15-7.png)
+![](..\图片\1-16【jvm】\15-7.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\15-8.png)
+![](..\图片\1-16【jvm】\15-8.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\15-9.png)
+![](..\图片\1-16【jvm】\15-9.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\15-10.png)
+![](..\图片\1-16【jvm】\15-10.png)
 
-![](D:\Java\笔记\图片\1-16【jvm】\15-11.png)
+![](..\图片\1-16【jvm】\15-11.png)
 
 ## 2.4 条件判断指令
 
@@ -1165,7 +1103,6 @@ public static void main(java.lang.String[]);
         24: iload_2
         25: invokevirtual #22                 // Method java/io/PrintStream.println:(I)V
         28: return
-
 ```
 
 ## 2.7 构造方法
@@ -1174,19 +1111,19 @@ public static void main(java.lang.String[]);
 
 ```java
 public class Demo3 {
-	static int i = 10;
+    static int i = 10;
 
-	static {
-		i = 20;
-	}
+    static {
+        i = 20;
+    }
 
-	static {
-		i = 30;
-	}
+    static {
+        i = 30;
+    }
 
-	public static void main(String[] args) {
-		System.out.println(i); //结果为30
-	}
+    public static void main(String[] args) {
+        System.out.println(i); //结果为30
+    }
 }
 ```
 
@@ -1213,32 +1150,32 @@ public class Demo3 {
 
 ```java
 public class Demo4 {
-	private String a = "s1";
+    private String a = "s1";
 
-	{
-		b = 20;
-	}
+    {
+        b = 20;
+    }
 
-	private int b = 10;
+    private int b = 10;
 
-	{
-		a = "s2";
-	}
+    {
+        a = "s2";
+    }
 
-	public Demo4(String a, int b) {
-		this.a = a;
-		this.b = b;
-	}
+    public Demo4(String a, int b) {
+        this.a = a;
+        this.b = b;
+    }
 
-	public static void main(String[] args) {
-		Demo4 d = new Demo4("s3", 30);
-		System.out.println(d.a);
-		System.out.println(d.b);
-	}
+    public static void main(String[] args) {
+        Demo4 d = new Demo4("s3", 30);
+        System.out.println(d.a); // s3
+        System.out.println(d.b); // 30
+    }
 }
 ```
 
-编译器会按从上至下的顺序，收集所有 {} 代码块和成员变量赋值的代码，形成新的构造方法，但原始构造方法内的代码总是在后：
+编译器会按从上至下的顺序，收集所有 `{}` 代码块和成员变量赋值的代码，形成新的构造方法，但原始构造方法内的代码总是在后：
 
 ```java
   public com.linxuan.Demo01(java.lang.String, int);
@@ -1340,25 +1277,55 @@ public class Demo01 {
 - 比较有意思的是 d.test4(); 是通过【对象引用】调用一个静态方法，可以看到在调用invokestatic 之前执行了 pop 指令，把【对象引用】从操作数栈弹掉了
 - 还有一个执行 invokespecial 的情况是通过 super 调用父类方法
 
-## 2.9 多态原理
-
-<!--这里少些了很多-->
-
-因为普通成员方法需要在运行时才能确定具体的内容，所以虚拟机需要调用**invokevirtual**指令
-
-在执行invokevirtual指令时，经历了以下几个步骤
-
-- 先通过栈帧中对象的引用找到对象
-- 分析对象头，找到对象实际的Class
-- Class结构中有**vtable**
-- 查询vtable找到方法的具体地址
-- 执行方法的字节码
-
-HSDB
+## 2.9 Synchronized
 
 ```java
-java -cp ./lib/sa-jdi.jar sun.jvm.hotspot.HSDB		// 进入jdk安装目录
+public class Demo01 {
+    public static void main(String[] args) {
+        Object lock = new Object();
+        synchronized (lock) {
+            System.out.println("ok");
+        }
+    }
+}
 ```
+
+```java
+  public static void main(java.lang.String[]);
+    descriptor: ([Ljava/lang/String;)V
+    flags: ACC_PUBLIC, ACC_STATIC
+    Code:
+      stack=2, locals=3, args_size=1
+         0: new           #3                  // class java/lang/Object
+         3: dup
+         4: invokespecial #8                  // Method java/lang/Object."<init>":()V
+         7: astore_1
+         8: aload_1
+         9: dup
+        10: astore_2
+        11: monitorenter
+        12: getstatic     #16                 // Field java/lang/System.out:Ljava/io/PrintStream;   
+        15: ldc           #22                 // String ok
+        17: invokevirtual #24                 // Method java/io/PrintStream.println:(Ljava/lang/String;)V
+        20: aload_2
+        21: monitorexit
+        22: goto          28
+        25: aload_2
+        26: monitorexit
+        27: athrow
+        28: return
+      Exception table:
+         from    to  target type
+            12    22    25   any
+            25    27    25   any
+      LineNumberTable:...
+      LocalVariableTable:
+        Start  Length  Slot  Name   Signature
+            0      29     0  args   [Ljava/lang/String;
+            8      21     1  lock   Ljava/lang/Object;
+```
+
+> 方法级别的 synchronized 不会在字节码指令中有所体现
 
 ## 2.10 异常处理
 
@@ -1366,14 +1333,14 @@ java -cp ./lib/sa-jdi.jar sun.jvm.hotspot.HSDB		// 进入jdk安装目录
 
 ```java
 public class Demo01 {
-	public static void main(String[] args) {
-		int i = 0;
-		try {
-			i = 10;
-		}catch (Exception e) {
-			i = 20;
-		}
-	}
+    public static void main(String[] args) {
+        int i = 0;
+        try {
+            i = 10;
+        }catch (Exception e) {
+            i = 20;
+        }
+    }
 }
 ```
 
@@ -1393,7 +1360,7 @@ public static void main(java.lang.String[]);
          9: bipush        20
         11: istore_1
         12: return
-      Exception table:		// 异常表 会检测2~5行的异常(不包含5行) 有异常会跳转至8行
+      Exception table:		// 异常表 前闭后开 会检测2~4行的异常(不包含5行) 有异常会跳转至8行
          from    to  target type
              2     5     8   Class java/lang/Exception
       LineNumberTable:
@@ -1422,19 +1389,19 @@ public static void main(java.lang.String[]);
 
 ```java
 public class Demo01 {
-	public static void main(String[] args) {
-		int i = 0;
+    public static void main(String[] args) {
+        int i = 0;
 
-		try {
-			i = 10;
-		} catch (ArithmeticException e) {
-			i = 20;
-		} catch (NullPointerException e) {
-			i = 30;
-		} catch (Exception e) {
-			i = 40;
-		}
-	}
+        try {
+            i = 10;
+        } catch (ArithmeticException e) {
+            i = 20;
+        } catch (NullPointerException e) {
+            i = 30;
+        } catch (Exception e) {
+            i = 40;
+        }
+    }
 }
 ```
 
@@ -1482,17 +1449,17 @@ public class Demo01 {
 
 ```java
 public class Demo01 {
-	public static void main(String[] args) {
-		try {
-			Method test = Demo01.class.getMethod("test");
-			test.invoke(null);
-		} catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
-			e.printStackTrace();
-		}
-	}
-	public static void test() {
-		System.out.println("ok");
-	}
+    public static void main(String[] args) {
+        try {
+            Method test = Demo01.class.getMethod("test");
+            test.invoke(null);
+        } catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
+            e.printStackTrace();
+        }
+    }
+    public static void test() {
+        System.out.println("ok");
+    }
 }
 ```
 
@@ -1536,16 +1503,16 @@ public class Demo01 {
 
 ```java
 public class Demo01 {
-	public static void main(String[] args) {
-		int i = 0;
-		try {
-			i = 10;
-		} catch (Exception e) {
-			i = 20;
-		} finally {
-			i = 30;
-		}
-	}
+    public static void main(String[] args) {
+        int i = 0;
+        try {
+            i = 10;
+        } catch (Exception e) {
+            i = 20;
+        } finally {
+            i = 30;
+        }
+    }
 }
 ```
 
@@ -1594,22 +1561,22 @@ public class Demo01 {
 
 ```java
 public class Demo3 {
-	public static void main(String[] args) {
-		int i = Demo3.test();
-        //结果为20
-		System.out.println(i);
-	}
+    public static void main(String[] args) {
+        int i = Demo3.test();
+        // 结果为20
+        System.out.println(i);
+    }
 
-	public static int test() {
-		int i;
-		try {
-			i = 10;
-			return i;
-		} finally {
-			i = 20;
-			return i;
-		}
-	}
+    public static int test() {
+        int i;
+        try {
+            i = 10;
+            return i;
+        } finally {
+            i = 20;
+            return i;
+        }
+    }
 }
 ```
 
@@ -1643,23 +1610,23 @@ Code:
 
 ```java
 public class Demo3 {
-   public static void main(String[] args) {
-      int i = Demo3.test();
-      //最终结果为20
-      System.out.println(i);
-   }
+    public static void main(String[] args) {
+        int i = Demo3.test();
+        // 最终结果为20
+        System.out.println(i);
+    }
 
-   public static int test() {
-      int i;
-      try {
-         i = 10;
-         i = i/0;			//这里应该会抛出异常 但是并没有
-         return i;
-      } finally {
-         i = 20;
-         return i;
-      }
-   }
+    public static int test() {
+        int i;
+        try {
+            i = 10;
+            i = i / 0;			//这里应该会抛出异常 但是并没有
+            return i;
+        } finally {
+            i = 20;
+            return i;
+        }
+    }
 }
 ```
 
@@ -1669,19 +1636,19 @@ public class Demo3 {
 
 ```java
 public class Demo4 {
-	public static void main(String[] args) {
-		int i = Demo4.test();
-		System.out.println(i);	// i = 10
-	}
+    public static void main(String[] args) {
+        int i = Demo4.test();
+        System.out.println(i);	// i = 10
+    }
 
-	public static int test() {
-		int i = 10;
-		try {
-			return i;
-		} finally {
-			i = 20;
-		}
-	}
+    public static int test() {
+        int i = 10;
+        try {
+            return i;
+        } finally {
+            i = 20;
+        }
+    }
 }
 ```
 
@@ -1705,54 +1672,4 @@ Code:
         from    to  target type
             3     5    10   anyCopy
 ```
-
-## 2.8 Synchronized
-
-```java
-public class Demo01 {
-	public static void main(String[] args) {
-		Object lock = new Object();
-		synchronized (lock) {
-			System.out.println("ok");
-		}
-	}
-}
-```
-
-```java
-  public static void main(java.lang.String[]);
-    descriptor: ([Ljava/lang/String;)V
-    flags: ACC_PUBLIC, ACC_STATIC
-    Code:
-      stack=2, locals=3, args_size=1
-         0: new           #3                  // class java/lang/Object
-         3: dup
-         4: invokespecial #8                  // Method java/lang/Object."<init>":()V
-         7: astore_1
-         8: aload_1
-         9: dup
-        10: astore_2
-        11: monitorenter
-        12: getstatic     #16                 // Field java/lang/System.out:Ljava/io/PrintStream;   
-        15: ldc           #22                 // String ok
-        17: invokevirtual #24                 // Method java/io/PrintStream.println:(Ljava/lang/String;)V
-        20: aload_2
-        21: monitorexit
-        22: goto          28
-        25: aload_2
-        26: monitorexit
-        27: athrow
-        28: return
-      Exception table:
-         from    to  target type
-            12    22    25   any
-            25    27    25   any
-      LineNumberTable:...
-      LocalVariableTable:
-        Start  Length  Slot  Name   Signature
-            0      29     0  args   [Ljava/lang/String;
-            8      21     1  lock   Ljava/lang/Object;
-```
-
-> 方法级别的 synchronized 不会在字节码指令中有所体现
 
