--- a/1-Java基础/1-16【JVM4-类加载、编译运行处理】.md
+++ b/1-Java基础/1-16【JVM4-类加载、编译运行处理】.md
@@ -62,7 +62,7 @@ JVM在该阶段为 static 变量分配空间，设置默认值（对应数据类
 
 - static变量在分配空间和赋值是在两个阶段完成的。分配内存空间在准备阶段完成，赋值在初始化阶段完成
 
-  所以如果是非static变量那么不会再准备阶段分配内存空间。
+  所以如果是非static变量那么不会在准备阶段分配内存空间。
 
   如果是static变量会在准备阶段分配内存空间，并且设置默认值，注意在这里设置了默认值了。赋值的话在初始化阶段完成。
 
@@ -77,13 +77,13 @@ JVM在该阶段为 static 变量分配空间，设置默认值（对应数据类
 ```java
 public class Demo01 {
     public static void main(String[] args) throws ClassNotFoundException, IOException {
-		ClassLoader classloader = Demo01.class.getClassLoader();
+        ClassLoader classloader = Demo01.class.getClassLoader();
         // loadClass 方法不会导致类的解析和初始化
         Class<?> c = classloader.loadClass("com.linxuan.demo03.C");
         // new C();
-		// 阻塞主线程
+        // 阻塞主线程
         System.in.read();
-	}
+    }
 }
 
 class C {
@@ -119,13 +119,13 @@ PS D:\Java\vscode-java\MavenProjects\jvm> jps
 ```java
 public class Demo01 {
     public static void main(String[] args) throws ClassNotFoundException, IOException {
-		// ClassLoader classloader = Demo01.class.getClassLoader();
+        // ClassLoader classloader = Demo01.class.getClassLoader();
         // loadClass 方法不会导致类的解析和初始化
         // Class<?> c = classloader.loadClass("com.linxuan.demo03.C");
         new C();
-		// 阻塞主线程
+        // 阻塞主线程
         System.in.read();
-	}
+    }
 }
 
 class C {
@@ -134,7 +134,6 @@ class C {
 
 class D {
 }
-
 ```
 
 解析以后，会将常量池中的符号引用解析为直接引用。可以看到，此时已加载并解析了类C和类D
@@ -145,7 +144,7 @@ class D {
 
 初始化阶段就是执行类构造器`cinit()`（有一个老师说是`clint()`）方法的过程，虚拟机会保证这个类的『构造方法』的线程安全，加锁。
 
-`cinit()`方法是由编译器自动收集类中的所有类变量的赋值动作和静态语句块（static{}块）中的语句合并产生的。
+`cinit()`方法是由编译器自动收集类中的所有类变量的赋值动作和静态语句块（`static{}`块）中的语句合并产生的。
 
 类的初始化是懒惰的，以下情况会初始化
 
@@ -188,7 +187,7 @@ public class Load3 {
     static {
         System.out.println("main init");
     }
-    
+
     public static void main(String[] args) throws ClassNotFoundException {
         // 1. 静态常量（基本类型和字符串）不会触发初始化
         System.out.println(B.b);
@@ -198,11 +197,11 @@ public class Load3 {
         System.out.println(new B[0]);
         // 4. 不会初始化类 B，但会加载 B、A
         ClassLoader cl = Thread.currentThread().getContextClassLoader();
-        cl.loadClass("cn.itcast.jvm.t3.B");
+        cl.loadClass("com.linxuan.jvm.t3.B");
         // 5. 不会初始化类 B，但会加载 B、A
         ClassLoader c2 = Thread.currentThread().getContextClassLoader();
-        Class.forName("cn.itcast.jvm.t3.B", false, c2);
-        
+        Class.forName("com.linxuan.jvm.t3.B", false, c2);
+
         // 1. 首次访问这个类的静态变量或静态方法时
         System.out.println(A.a);
         // 2. 子类初始化，如果父类还没初始化，会引发
@@ -210,7 +209,7 @@ public class Load3 {
         // 3. 子类访问父类静态变量，只触发父类初始化
         System.out.println(B.a);
         // 4. 会初始化类 B，并先初始化类 A
-        Class.forName("cn.itcast.jvm.t3.B");
+        Class.forName("com.linxuan.jvm.t3.B");
     }
 }
 ```
@@ -232,7 +231,6 @@ class E {
     public static final String b = "hello";
     public static final Integer c = 20;
 }
-
 ```
 
 如果是a，b两个常量并不会导致E初始化，他们会在链接准备阶段就赋值完毕了。但是如果是c的话，因为是包装类型，所以会初始化。
@@ -246,7 +244,7 @@ public class Singleton{
     public static void test() {
         System.out.println("test");
     }
-    
+
     private Singleton() { }
 
     // 内部类中保存单例
@@ -365,11 +363,9 @@ public class Demo01 {
 直接运行主方法会输出如下内容：
 
 ```apl
-ext G init
+ClassPath Test init
 sun.misc.Launcher$AppClassLoader@6d06d69c
 ```
-
-
 
 写一个同名的类
 
@@ -420,9 +416,8 @@ protected Class<?> loadClass(String name, boolean resolve) throws ClassNotFoundE
                     // 2. 有上级的话，委派上级 loadClass
                     c = parent.loadClass(name, false);
                 } else {
-                    // 3. 如果没有上级了（ExtClassLoader），则委派
-                    BootstrapClassLoader
-                        c = findBootstrapClassOrNull(name);
+                    // 3. 如果没有上级了（ExtClassLoader），则委派BootstrapClassLoader
+                    BootstrapClassLoader c = findBootstrapClassOrNull(name);
                 }
             } catch (ClassNotFoundException e) {
             }
@@ -572,12 +567,7 @@ while(iter.hasNext()) {
 }
 ```
 
-来得到实现类，体现的是【面向接口编程+解耦】的思想，在下面一些框架中都运用了此思想：
-
-- JDBC
-- Servlet 初始化器
-- Spring 容器
-- Dubbo（对 SPI 进行了扩展）
+来得到实现类，体现的是【面向接口编程+解耦】的思想，在下面一些框架中都运用了此思想：JDBC、Servlet 初始化器、Spring 容器、Dubbo（对 SPI 进行了扩展）。
 
 接着看 ServiceLoader.load 方法：
 
@@ -618,10 +608,7 @@ private S nextService() {
     }
     throw new Error(); // This cannot happen
 }
-
 ```
-
-
 
 ## 2.5 自定义类加载器
 
@@ -674,7 +661,6 @@ class MyClassLoader extends ClassLoader {
             throw new ClassNotFoundException("类文件未找到", e);
         }
     }
-
 }
 ```
 
@@ -732,7 +718,7 @@ public class Candy1 {
 
 基本类型和其包装类型的相互转换过程，称为拆装箱。
 
-这个特性是 `JDK 5` 开始加入的， `代码片段1` ：
+这个特性是 `JDK 5` 开始加入的：
 
 ```java
 public class Demo2 {
@@ -743,7 +729,7 @@ public class Demo2 {
 }
 ```
 
-这段代码在 `JDK 5` 之前是无法编译通过的，必须改写为 `代码片段2` :
+这段代码在 `JDK 5` 之前是无法编译通过的，必须改写为 :
 
 ```java
 public class Demo2 {
@@ -849,20 +835,18 @@ for (Type type : types) {
 泛型参数[1] - class java.lang.Object
 ```
 
-
-
 ## 3.4 可变参数
 
 ```java
 public class Demo04 {
-   public static void foo(String... args) {
-      String[] arr = args;
-      System.out.println(arr.length);
-   }
+    public static void foo(String... args) {
+        String[] arr = args;
+        System.out.println(arr.length);
+    }
 
-   public static void main(String[] args) {
-      foo("hello", "world");
-   }
+    public static void main(String[] args) {
+        foo("hello", "world");
+    }
 }
 ```
 
@@ -1024,19 +1008,19 @@ enum SEX {
 
 ```java
 public class Demo07 {
-   public static void main(String[] args) {
-      SEX sex = SEX.MALE;
-      switch (sex) {
-         case MALE:
-            System.out.println("man");
-            break;
-         case FEMALE:
-            System.out.println("woman");
-            break;
-         default:
-            break;
-      }
-   }
+    public static void main(String[] args) {
+        SEX sex = SEX.MALE;
+        switch (sex) {
+            case MALE:
+                System.out.println("man");
+                break;
+            case FEMALE:
+                System.out.println("woman");
+                break;
+            default:
+                break;
+        }
+    }
 }
 ```
 
@@ -1044,41 +1028,39 @@ public class Demo07 {
 
 ```java
 public class Demo07 {
-   /**     
+    /**     
     * 定义一个合成类（仅 jvm 使用，对我们不可见）     
     * 用来映射枚举的 ordinal 与数组元素的关系     
     * 枚举的 ordinal 表示枚举对象的序号，从 0 开始     
     * 即 MALE 的 ordinal()=0，FEMALE 的 ordinal()=1     
     */ 
-   static class $MAP {
-      //数组大小即为枚举元素个数，里面存放了case用于比较的数字
-      static int[] map = new int[2];
-      static {
-         //ordinal即枚举元素对应所在的位置，MALE为0，FEMALE为1
-         map[SEX.MALE.ordinal()] = 1;
-         map[SEX.FEMALE.ordinal()] = 2;
-      }
-   }
+    static class $MAP {
+        //数组大小即为枚举元素个数，里面存放了case用于比较的数字
+        static int[] map = new int[2];
+        static {
+            //ordinal即枚举元素对应所在的位置，MALE为0，FEMALE为1
+            map[SEX.MALE.ordinal()] = 1;
+            map[SEX.FEMALE.ordinal()] = 2;
+        }
+    }
 
-   public static void main(String[] args) {
-      SEX sex = SEX.MALE;
-      //将对应位置枚举元素的值赋给x，用于case操作
-      int x = $MAP.map[sex.ordinal()];
-      switch (x) {
-         case 1:
-            System.out.println("man");
-            break;
-         case 2:
-            System.out.println("woman");
-            break;
-         default:
-            break;
-      }
-   }
+    public static void main(String[] args) {
+        SEX sex = SEX.MALE;
+        //将对应位置枚举元素的值赋给x，用于case操作
+        int x = $MAP.map[sex.ordinal()];
+        switch (x) {
+            case 1:
+                System.out.println("man");
+                break;
+            case 2:
+                System.out.println("woman");
+                break;
+            default:
+                break;
+        }
+    }
 }
 ```
-
-
 
 ## 3.8 枚举类
 
@@ -1086,7 +1068,7 @@ public class Demo07 {
 
 ```java
 enum SEX {
-   MALE, FEMALE;
+    MALE, FEMALE;
 }
 ```
 
@@ -1094,30 +1076,30 @@ enum SEX {
 
 ```java
 public final class Sex extends Enum<Sex> {   
-   //对应枚举类中的元素
-   public static final Sex MALE;    
-   public static final Sex FEMALE;    
-   private static final Sex[] $VALUES;
-   
+    //对应枚举类中的元素
+    public static final Sex MALE;    
+    public static final Sex FEMALE;    
+    private static final Sex[] $VALUES;
+
     static {       
-    	//调用构造函数，传入枚举元素的值及ordinal
-    	MALE = new Sex("MALE", 0);    
+        //调用构造函数，传入枚举元素的值及ordinal
+        MALE = new Sex("MALE", 0);    
         FEMALE = new Sex("FEMALE", 1);   
         $VALUES = new Sex[]{MALE, FEMALE}; 
-   }
- 	
+    }
+
     //调用父类中的方法
     private Sex(String name, int ordinal) {     
         super(name, ordinal);    
     }
-   
+
     public static Sex[] values() {  
         return $VALUES.clone();  
     }
     public static Sex valueOf(String name) { 
         return Enum.valueOf(Sex.class, name);  
     } 
-   
+
 }
 ```
 
@@ -1153,7 +1135,7 @@ public class Demo01 {
 public class Demo01 {
     public Demo01() {
     }
-    
+
     public static void main(String[] args) {
         try {
             InputStream is = new FileInputStream("d:\\1.txt");
@@ -1225,7 +1207,7 @@ java.lang.ArithmeticException: / by zero
 
 - 父子类的返回值完全一致
 
-- 子类返回值可以是父类返回值的子类（比较绕口，见下面的例子）
+- 子类返回值是父类返回值的子类
 
   ```java
   class A {
@@ -1275,8 +1257,6 @@ public java.lang.Integer test.candy.B.m()
 public java.lang.Number test.candy.B.m()
 ```
 
-
-
 ## 3.11 匿名内部类
 
 ```java
@@ -1312,8 +1292,6 @@ public class Candy11 {
     }
 }
 ```
-
-
 
 引用局部变量的匿名内部类，源代码：
 
@@ -1675,7 +1653,7 @@ public void test1() {
 ## 4.2 反射优化
 
 ```java
-package cn.itcast.jvm.t3.reflect;
+package com.linxuan.jvm.t3.reflect;
 
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
@@ -1745,7 +1723,7 @@ class NativeMethodAccessorImpl extends MethodAccessorImpl {
 java -jar arthas-boot.jar
 [INFO] arthas-boot version: 3.1.1
 [INFO] Found existing java process, please choose one and hit RETURN.
-* [1]: 13065 cn.itcast.jvm.t3.reflect.Reflect1
+* [1]: 13065 com.linxuan.jvm.t3.reflect.Reflect1
 ```
 
 选择 1 回车表示分析该进程
@@ -1781,10 +1759,10 @@ $ jad sun.reflect.GeneratedMethodAccessor1
 * Decompiled with CFR 0_132.
 *
 * Could not load the following classes:
-* cn.itcast.jvm.t3.reflect.Reflect1
+* com.linxuan.jvm.t3.reflect.Reflect1
 */
 package sun.reflect;
-import cn.itcast.jvm.t3.reflect.Reflect1;
+import com.linxuan.jvm.t3.reflect.Reflect1;
 import java.lang.reflect.InvocationTargetException;
 import sun.reflect.MethodAccessorImpl;
 
