--- a/2-JavaWeb/2-34【工具篇】.md
+++ b/2-JavaWeb/2-34【工具篇】.md
@@ -71,6 +71,84 @@ Constant pool:
 }
 ```
 
+## 1.2 线程诊断工具
+
+### 1.2.1 jstack
+
+Linux环境下运行某些程序的时候，可能导致CPU的占用过高，这时需要定位占用CPU过高的线程
+
+```sh
+top # 查看是哪个进程占用CPU过高
+```
+
+```sh
+ps H -eo pid, tid（线程id）, %cpu | grep pid		# 通过ps命令进一步查看是哪个线程占用CPU过高
+```
+
+```sh
+jstack 进程id		# 查看进程中的导致CPU占用过高的线程id，并查看导致CPU占用过高的代码行号；
+```
+
+第三步查看到进程中的线程的nid与刚刚ps命令查看到的tid对比定位，找到出问题的线程id，然后查看行号就可以精准定位错误代码了。
+
+下面的代码就会造成死锁：
+
+```java
+public class JvmStackThreadDeadLock {
+
+    static A a = new A();
+    static B b = new B();
+
+    public static void main(String[] args) {
+
+        new Thread(()->{
+            synchronized (a){
+                try {
+                    Thread.sleep(1000);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                synchronized (b){
+                    System.out.println("thread1拿到了a和b");
+                }
+            }
+        },"thread1").start();
+
+        new Thread(()->{
+            synchronized (b){
+                synchronized (a){
+                    System.out.println("thread2拿到了a和b");
+                }
+            }
+        },"thread2").start();
+    }
+}
+```
+
+## 1.3 内存诊断
+
+```apl
+jps # jps工具：查看当前系统中有哪些Java进程
+```
+
+```apl
+jmap -heap pid(进程ID) # jmap工具：查看堆内存占用情况 通过上面的jps获取到的PID查看堆内存使用情况
+```
+
+```apl
+jconsole # jconsole工具：图形界面，多功能的检测工具，可以连续检测 终端输入jconsole可打开图形化界面
+```
+
+```apl
+jvisualvm # 更厉害的可视化工具 同样在终端输入命令即可。
+```
+
+## 1.4 HSDB
+
+
+
+## 1.5 arthas 
+
 ## 1.2 JMH性能测试
 
 JMH（Java Microbenchmark Harness）是一个 Java 工具，用于构建、运行和分析用 Java 和其他针对 JVM 的语言编写的 纳米/微米/毫/宏观 基准测试，而且是由Java虚拟机团队开发的。简单说，就是用来测量代码运行性能。
