--- a/6-扩展/6-04【数据结构和算法-算法】.md
+++ b/6-扩展/6-04【数据结构和算法-算法】.md
@@ -978,15 +978,15 @@ class Solution {
 }
 ```
 
-寻找索引，不管存不存在
+寻找比目标数大的最小索引
 
 ```java
 public int searchInsert(int[] nums, int target) {
     int left = 0, right = nums.length - 1;
 
     while (left <= right) {
-        int mid = ((right - left) >> 1) + left;
-        if (nums[mid] < target) left = mid + 1;
+        int mid = left + ((right - left) >> 1);
+        if (nums[mid] <= target) left = mid + 1;
         else right = mid - 1;
     }
     return left;
